--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ pillow==11.1.0
 loguru==0.7.3
 playwright==1.47.0
 pandas==2.2.3
+torch==2.6.0
+torchvision==0.21.0
+scikit-learn==1.6.1
 
 ruff==0.6.4
 pre-commit==3.8.0
