--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ pandas==2.2.3
 torch==2.6.0
 torchvision==0.21.0
 scikit-learn==1.6.1
+ultralytics==8.3.74
+pyyaml==6.0.2
 
 ruff==0.6.4
 pre-commit==3.8.0
