--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ultralytics==8.3.74
 pyyaml==6.0.2
 sphinx==8.2.3
 sphinx-rtd-theme==3.0.2
+gradio==5.29.0
 
-ruff==0.6.4
+ruff==0.9.10
 pre-commit==3.8.0
